fix image alignment when using pinterest hover

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -125,8 +125,8 @@ background-position: center;
 opacity: .85;
 }
 .p3_pin_wrapper_outer {
-display: block;
-width: 100%;
+display: inline-block;
+max-width: 100%;
 text-align: center;
 }
 .p3_pin_wrapper {
